add install script

--- a/conf/logstash.conf
+++ b/conf/logstash.conf
@@ -2,13 +2,16 @@
 # the needed information.
 
 input {
-     file{
-        path => ["/home/rafael/Downloads/honeyd-logs/*"]
-        start_position => "beginning"
-     }
-    #beats{
-    #    port => 5044
-    #}
+
+    # For debug
+    # file{
+    #    path => ["/home/rafael/Downloads/honeyd-logs/*"]
+    #    start_position => "beginning"
+    # }
+
+    beats{
+        port => 5044
+    }
 }
 
 filter {
@@ -36,12 +39,10 @@ output{
      elasticsearch {
         hosts => ["127.0.0.1"]
         index => "honeyd"
-        #template => "/home/rafael/tcc/conf/log-template.json"
-        #template_name => "honeyd"
-        #template_overwrite => true     
      }
 
-    stdout{
-        codec => rubydebug
-    }
+    # For Debug
+    #stdout{
+    #    codec => rubydebug
+    #}
 }
