--- a/conf/logstash.conf
+++ b/conf/logstash.conf
@@ -2,13 +2,6 @@
 # the needed information.
 
 input {
-
-    # For debug
-    # file{
-    #    path => ["/home/rafael/Downloads/honeyd-logs/*"]
-    #    start_position => "beginning"
-    # }
-
     beats{
         port => 5044
     }
@@ -17,7 +10,7 @@ input {
 filter {
     #Filtrar a data da tentativa de acesso e ip de origem
     grok{
-        patterns_dir => ["/home/rafael/tcc/conf/patterns"]
+        patterns_dir => ["/home/rafael/garf/conf/patterns"]
         #Kippo Pattern
         #match => { "message" => "%{TIMESTAMP_ISO8601:date}\s(\[%{WORD}.%{WORD}.%{WORD}.%{WORD}\])\s%{WORD}\s%{WORD}:\s%{IPV4:origin_ip}:%{NUMBER}\s\(%{IPV4}:%{NUMBER}\)\s\[%{WORD}:\s%{NUMBER}\]"}
         match => { "message" => "%{CUSTOM_DATE:raw_date}\s%{WORD:protocol}\(%{INT}\)\s%{CONNECTION_TYPE:connection_status}\s%{IPV4:source_ip}\s%{NUMBER}\s%{IPV4}\s%{INT:destination_port}:\s%{INT}\s%{WORD}\s"}
@@ -40,9 +33,7 @@ output{
         hosts => ["127.0.0.1"]
         index => "honeyd"
      }
-
-    # For Debug
-    #stdout{
-    #    codec => rubydebug
-    #}
+     stdout{                                                                                                                                     
+	codec => rubydebug                                                                                                                      
+     }
 }
