--- a/src/garf.ini
+++ b/src/garf.ini
@@ -1,6 +1,6 @@
 [app]
 # this configuration set the path to the app folder
-garf_home = /home/rafael/tcc
+garf_home = /home/rafael/garf
 
 # This variable stores the interval that will
 # be set at the crontab job. The value must be in
