correção na remocao de logs correcao no configuracao do job no cron

--- a/conf/logstash.conf
+++ b/conf/logstash.conf
@@ -2,6 +2,9 @@
 # the needed information.
 
 input {
+    file{
+        path => ['/var/log/honeypot.log']
+    }
     beats{
         port => 5044
     }
