--- a/conf/requirements.txt
+++ b/conf/requirements.txt
@@ -1,6 +1,40 @@
+asn1crypto==0.22.0
+boto==2.44.0
+certifi==2017.4.17
+chardet==3.0.4
+click==6.7
 configparser==3.5.0
+cryptography==1.9
+duplicity==0.7.12
 elasticsearch==6.1.1
+enum34==1.1.6
+Flask==0.12.2
+idna==2.5
+ipaddress==1.0.17
+itsdangerous==0.24
+Jinja2==2.10
+keyring==10.4.0
+keyrings.alt==2.2
+lockfile==0.12.2
+MarkupSafe==1.0
+mcomix==1.2.1
+ndg-httpsclient==0.4.3
+olefile==0.44
+Pillow==4.1.1
+pyasn1==0.1.9
+pycrypto==2.6.1
+pycurl==7.43.0
+pygobject==3.24.1
+pyOpenSSL==16.2.0
+python-apt==1.4.0b3
+python-cloudfiles==1.7.10
 python-crontab==2.2.8
 python-dateutil==2.7.0
+python-iptables==0.13.0
+pyxdg==0.25
+requests==2.18.1
+SecretStorage==2.3.1
 six==1.11.0
 urllib3==1.22
+virtualenv==15.1.0
+Werkzeug==0.14.1
